# b7z

./: .cmake-format.json  .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  build.ps1
.github/workflows/: ci.yml
C/: 7zVersion.h  LzFind.c
C/zstdmt/: lz4-mt_decompress.c
CPP/: Build.mak  CMakeLists.txt
CPP/7zip/: 7zip.mak  CMakeLists.txt  Guid.txt  baulk7zG.cmake
CPP/7zip/Archive/: IArchive.h
CPP/7zip/Archive/Zip/: ZipAddCommon.cpp  ZipHandler.cpp  ZipHandler.h
CPP/7zip/Bundles/Fm/: StdAfx.h
CPP/7zip/UI/Common/: CompressCall.cpp  ZipRegistry.cpp
CPP/7zip/UI/Console/: Main.cpp
CPP/7zip/UI/Explorer/: StdAfx.h
CPP/7zip/UI/FileManager/: PanelFolderChange.cpp  SettingsPage.cpp  SettingsPage2.rc  StdAfx.h  makefile
CPP/7zip/UI/GUI/: 7zG.exe.manifest  CompressDialog.rc  StdAfx.h  makefile
CPP/Windows/Hijack/: FileBrowser.cpp  MessageBox.cpp
baulk7z/: CMakeLists.txt  ReadMe.md  baulk7z.cpp
res/: 7zVersion.rc  baulk7z.manifest  baulk7z.rc  baulk7zversion.h
